slimming down optimization library

--- a/Tutorial/Step 1 - Extract From OSM.ipynb
+++ b/Tutorial/Step 1 - Extract From OSM.ipynb
@@ -11,17 +11,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "import os, sys\n",
+    "import os, sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "networkx version: 2.4 \n",
+      "matplotlib version: 3.1.2 \n",
+      "osmnx version: 0.11 \n"
+     ]
+    }
+   ],
+   "source": [
     "# add to your system path the location of the LoadOSM.py and GOSTnet.py scripts\n",
-    "sys.path.append(r'C:\\Users\\charl\\Documents\\GitHub\\GOST_PublicGoods\\GOSTNets\\GOSTNets')\n",
-    "import GOSTnet as gn\n",
-    "import LoadOSM as losm\n",
+    "sys.path.append(\"../\")\n",
+    "import GOSTnets as gn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import importlib"
    ]
   },
@@ -34,13 +59,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 33,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "pth = r'C:\\Users\\charl\\Documents\\T' # change this path to your working folder\n",
+    "pth = \"./\" # change this path to your working folder\n",
     "fil = r'iceland-latest.osm.pbf' # download this file from geofabrik: http://download.geofabrik.de/europe/iceland.html. \n",
     "\n",
     "# be sure to place the .osm.pbf file in the 'tutorial data' folder. \n",
@@ -57,13 +80,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./tutorial_data/iceland-latest.osm.pbf'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#dir(gn)\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "iceland = losm.OSM_to_network(f)"
+    "from osgeo import ogr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ALTER_ALL_FLAG',\n",
+       " 'ALTER_DEFAULT_FLAG',\n",
+       " 'ALTER_NAME_FLAG',\n",
+       " 'ALTER_NULLABLE_FLAG',\n",
+       " 'ALTER_TYPE_FLAG',\n",
+       " 'ALTER_WIDTH_PRECISION_FLAG',\n",
+       " 'ApproximateArcAngles',\n",
+       " 'BuildPolygonFromEdges',\n",
+       " 'CreateGeometryFromGML',\n",
+       " 'CreateGeometryFromJson',\n",
+       " 'CreateGeometryFromWkb',\n",
+       " 'CreateGeometryFromWkt',\n",
+       " 'DataSource',\n",
+       " 'DataSource_swigregister',\n",
+       " 'DontUseExceptions',\n",
+       " 'Driver',\n",
+       " 'Driver_swigregister',\n",
+       " 'F_VAL_ALL',\n",
+       " 'F_VAL_ALLOW_NULL_WHEN_DEFAULT',\n",
+       " 'F_VAL_GEOM_TYPE',\n",
+       " 'F_VAL_NULL',\n",
+       " 'F_VAL_WIDTH',\n",
+       " 'Feature',\n",
+       " 'FeatureDefn',\n",
+       " 'FeatureDefn_swigregister',\n",
+       " 'Feature_swigregister',\n",
+       " 'FieldDefn',\n",
+       " 'FieldDefn_swigregister',\n",
+       " 'ForceTo',\n",
+       " 'ForceToLineString',\n",
+       " 'ForceToMultiLineString',\n",
+       " 'ForceToMultiPoint',\n",
+       " 'ForceToMultiPolygon',\n",
+       " 'ForceToPolygon',\n",
+       " 'GT_Flatten',\n",
+       " 'GT_GetCollection',\n",
+       " 'GT_GetCurve',\n",
+       " 'GT_GetLinear',\n",
+       " 'GT_HasM',\n",
+       " 'GT_HasZ',\n",
+       " 'GT_IsCurve',\n",
+       " 'GT_IsNonLinear',\n",
+       " 'GT_IsSubClassOf',\n",
+       " 'GT_IsSurface',\n",
+       " 'GT_SetM',\n",
+       " 'GT_SetModifier',\n",
+       " 'GT_SetZ',\n",
+       " 'GeneralCmdLineProcessor',\n",
+       " 'GeomFieldDefn',\n",
+       " 'GeomFieldDefn_swigregister',\n",
+       " 'Geometry',\n",
+       " 'GeometryTypeToName',\n",
+       " 'Geometry_swigregister',\n",
+       " 'GetDriver',\n",
+       " 'GetDriverByName',\n",
+       " 'GetDriverCount',\n",
+       " 'GetFieldSubTypeName',\n",
+       " 'GetFieldTypeName',\n",
+       " 'GetNonLinearGeometriesEnabledFlag',\n",
+       " 'GetOpenDS',\n",
+       " 'GetOpenDSCount',\n",
+       " 'GetUseExceptions',\n",
+       " 'Layer',\n",
+       " 'Layer_swigregister',\n",
+       " 'MajorObject',\n",
+       " 'MajorObject_swigregister',\n",
+       " 'NullFID',\n",
+       " 'ODrCCreateDataSource',\n",
+       " 'ODrCDeleteDataSource',\n",
+       " 'ODsCCreateGeomFieldAfterCreateLayer',\n",
+       " 'ODsCCreateLayer',\n",
+       " 'ODsCCurveGeometries',\n",
+       " 'ODsCDeleteLayer',\n",
+       " 'ODsCEmulatedTransactions',\n",
+       " 'ODsCMeasuredGeometries',\n",
+       " 'ODsCRandomLayerRead',\n",
+       " 'ODsCRandomLayerWrite',\n",
+       " 'ODsCTransactions',\n",
+       " 'OFSTBoolean',\n",
+       " 'OFSTFloat32',\n",
+       " 'OFSTInt16',\n",
+       " 'OFSTJSON',\n",
+       " 'OFSTNone',\n",
+       " 'OFTBinary',\n",
+       " 'OFTDate',\n",
+       " 'OFTDateTime',\n",
+       " 'OFTInteger',\n",
+       " 'OFTInteger64',\n",
+       " 'OFTInteger64List',\n",
+       " 'OFTIntegerList',\n",
+       " 'OFTReal',\n",
+       " 'OFTRealList',\n",
+       " 'OFTString',\n",
+       " 'OFTStringList',\n",
+       " 'OFTTime',\n",
+       " 'OFTWideString',\n",
+       " 'OFTWideStringList',\n",
+       " 'OGRERR_CORRUPT_DATA',\n",
+       " 'OGRERR_FAILURE',\n",
+       " 'OGRERR_INVALID_HANDLE',\n",
+       " 'OGRERR_NONE',\n",
+       " 'OGRERR_NON_EXISTING_FEATURE',\n",
+       " 'OGRERR_NOT_ENOUGH_DATA',\n",
+       " 'OGRERR_NOT_ENOUGH_MEMORY',\n",
+       " 'OGRERR_UNSUPPORTED_GEOMETRY_TYPE',\n",
+       " 'OGRERR_UNSUPPORTED_OPERATION',\n",
+       " 'OGRERR_UNSUPPORTED_SRS',\n",
+       " 'OJLeft',\n",
+       " 'OJRight',\n",
+       " 'OJUndefined',\n",
+       " 'OLCAlterFieldDefn',\n",
+       " 'OLCCreateField',\n",
+       " 'OLCCreateGeomField',\n",
+       " 'OLCCurveGeometries',\n",
+       " 'OLCDeleteFeature',\n",
+       " 'OLCDeleteField',\n",
+       " 'OLCFastFeatureCount',\n",
+       " 'OLCFastGetExtent',\n",
+       " 'OLCFastSetNextByIndex',\n",
+       " 'OLCFastSpatialFilter',\n",
+       " 'OLCIgnoreFields',\n",
+       " 'OLCMeasuredGeometries',\n",
+       " 'OLCRandomRead',\n",
+       " 'OLCRandomWrite',\n",
+       " 'OLCReorderFields',\n",
+       " 'OLCSequentialWrite',\n",
+       " 'OLCStringsAsUTF8',\n",
+       " 'OLCTransactions',\n",
+       " 'OLMD_FID64',\n",
+       " 'Open',\n",
+       " 'OpenShared',\n",
+       " 'RegisterAll',\n",
+       " 'SetGenerate_DB2_V72_BYTE_ORDER',\n",
+       " 'SetNonLinearGeometriesEnabledFlag',\n",
+       " 'StyleTable',\n",
+       " 'StyleTable_swigregister',\n",
+       " 'TermProgress',\n",
+       " 'TermProgress_nocb',\n",
+       " 'UseExceptions',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " '_newclass',\n",
+       " '_object',\n",
+       " '_ogr',\n",
+       " '_swig_getattr',\n",
+       " '_swig_getattr_nondynamic',\n",
+       " '_swig_property',\n",
+       " '_swig_repr',\n",
+       " '_swig_setattr',\n",
+       " '_swig_setattr_nondynamic',\n",
+       " 'osr',\n",
+       " 'wkb25Bit',\n",
+       " 'wkb25DBit',\n",
+       " 'wkbCircularString',\n",
+       " 'wkbCircularStringM',\n",
+       " 'wkbCircularStringZ',\n",
+       " 'wkbCircularStringZM',\n",
+       " 'wkbCompoundCurve',\n",
+       " 'wkbCompoundCurveM',\n",
+       " 'wkbCompoundCurveZ',\n",
+       " 'wkbCompoundCurveZM',\n",
+       " 'wkbCurve',\n",
+       " 'wkbCurveM',\n",
+       " 'wkbCurvePolygon',\n",
+       " 'wkbCurvePolygonM',\n",
+       " 'wkbCurvePolygonZ',\n",
+       " 'wkbCurvePolygonZM',\n",
+       " 'wkbCurveZ',\n",
+       " 'wkbCurveZM',\n",
+       " 'wkbGeometryCollection',\n",
+       " 'wkbGeometryCollection25D',\n",
+       " 'wkbGeometryCollectionM',\n",
+       " 'wkbGeometryCollectionZM',\n",
+       " 'wkbLineString',\n",
+       " 'wkbLineString25D',\n",
+       " 'wkbLineStringM',\n",
+       " 'wkbLineStringZM',\n",
+       " 'wkbLinearRing',\n",
+       " 'wkbMultiCurve',\n",
+       " 'wkbMultiCurveM',\n",
+       " 'wkbMultiCurveZ',\n",
+       " 'wkbMultiCurveZM',\n",
+       " 'wkbMultiLineString',\n",
+       " 'wkbMultiLineString25D',\n",
+       " 'wkbMultiLineStringM',\n",
+       " 'wkbMultiLineStringZM',\n",
+       " 'wkbMultiPoint',\n",
+       " 'wkbMultiPoint25D',\n",
+       " 'wkbMultiPointM',\n",
+       " 'wkbMultiPointZM',\n",
+       " 'wkbMultiPolygon',\n",
+       " 'wkbMultiPolygon25D',\n",
+       " 'wkbMultiPolygonM',\n",
+       " 'wkbMultiPolygonZM',\n",
+       " 'wkbMultiSurface',\n",
+       " 'wkbMultiSurfaceM',\n",
+       " 'wkbMultiSurfaceZ',\n",
+       " 'wkbMultiSurfaceZM',\n",
+       " 'wkbNDR',\n",
+       " 'wkbNone',\n",
+       " 'wkbPoint',\n",
+       " 'wkbPoint25D',\n",
+       " 'wkbPointM',\n",
+       " 'wkbPointZM',\n",
+       " 'wkbPolygon',\n",
+       " 'wkbPolygon25D',\n",
+       " 'wkbPolygonM',\n",
+       " 'wkbPolygonZM',\n",
+       " 'wkbPolyhedralSurface',\n",
+       " 'wkbPolyhedralSurfaceM',\n",
+       " 'wkbPolyhedralSurfaceZ',\n",
+       " 'wkbPolyhedralSurfaceZM',\n",
+       " 'wkbSurface',\n",
+       " 'wkbSurfaceM',\n",
+       " 'wkbSurfaceZ',\n",
+       " 'wkbSurfaceZM',\n",
+       " 'wkbTIN',\n",
+       " 'wkbTINM',\n",
+       " 'wkbTINZ',\n",
+       " 'wkbTINZM',\n",
+       " 'wkbTriangle',\n",
+       " 'wkbTriangleM',\n",
+       " 'wkbTriangleZ',\n",
+       " 'wkbTriangleZM',\n",
+       " 'wkbUnknown',\n",
+       " 'wkbXDR']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(ogr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iceland = gn.OSM_to_network(f)"
    ]
   },
   {
@@ -75,53 +377,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "service           25165\n",
-       "footway           15868\n",
-       "track              9953\n",
-       "residential        9519\n",
-       "path               7292\n",
-       "tertiary           4573\n",
-       "unclassified       2997\n",
-       "secondary          2898\n",
-       "primary            2353\n",
-       "trunk              1461\n",
-       "steps               793\n",
-       "trunk_link          283\n",
-       "platform            269\n",
-       "bridleway           247\n",
-       "primary_link        170\n",
-       "cycleway            124\n",
-       "secondary_link       95\n",
-       "living_street        89\n",
-       "tertiary_link        47\n",
-       "motorway             40\n",
-       "motorway_link        36\n",
-       "construction         34\n",
-       "pedestrian           24\n",
-       "proposed             16\n",
-       "road                 14\n",
-       "raceway              12\n",
-       "corridor              8\n",
-       "bus_stop              7\n",
-       "planned               2\n",
-       "rest_area             2\n",
-       "emergency_bay         1\n",
-       "abandoned             1\n",
-       "services              1\n",
-       "Name: infra_type, dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iceland.roads_raw.infra_type.value_counts()"
    ]
@@ -135,10 +393,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "accepted_road_types = ['residential', 'unclassified', 'track','service','tertiary','road','secondary','primary','trunk','primary_link','trunk_link','tertiary_link','secondary_link']"
@@ -153,10 +409,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "iceland.filterRoads(acceptedRoads = accepted_road_types)"
@@ -164,33 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "service           25165\n",
-       "track              9953\n",
-       "residential        9519\n",
-       "tertiary           4573\n",
-       "unclassified       2997\n",
-       "secondary          2898\n",
-       "primary            2353\n",
-       "trunk              1461\n",
-       "trunk_link          283\n",
-       "primary_link        170\n",
-       "secondary_link       95\n",
-       "tertiary_link        47\n",
-       "road                 14\n",
-       "Name: infra_type, dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iceland.roads_raw.infra_type.value_counts()"
    ]
@@ -204,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,22 +452,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False    48689\n",
-       "True     10839\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iceland.roads_raw.geometry.intersects(shp_obj).value_counts()"
    ]
@@ -251,10 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "iceland.roads_raw = iceland.roads_raw.loc[iceland.roads_raw.geometry.intersects(shp_obj) == True]"
@@ -269,10 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "iceland.generateRoadsGDF(verbose = False)"
@@ -287,20 +500,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<networkx.classes.multidigraph.MultiDiGraph at 0x1600e49f780>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "iceland.initialReadIn()"
    ]
@@ -314,10 +516,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "gn.save(iceland.network,'Iceland_unclean',os.path.join(pth, 'tutorial_outputs'))"
@@ -347,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
