fixing error in latest push of load_osm module, adding finding latest subgraph to tutorial

--- a/tutorial/Step 2 - Clean Network.ipynb
+++ b/tutorial/Step 2 - Clean Network.ipynb
@@ -39,6 +39,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pth = \"./\" # change this path to your working folder\n",
+    "data_pth = os.path.join(pth, 'tutorial_outputs')\n",
+    "\n",
+    "# read back your graph from step 1 from you saved pickle\n",
+    "G = nx.read_gpickle(os.path.join(data_pth, 'iceland_unclean.pickle'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional step: Only use the largest sub-graph\n",
+    "Network analysis is often done on only connected graphs. Disconnected graphs can result in paths that cannot reach their destination. Also, you can evaluate how connected your network is and have the option of going back and making more edits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify only the largest graph\n",
+    "\n",
+    "# compatible with NetworkX 2.4\n",
+    "list_of_subgraphs = list(G.subgraph(c).copy() for c in nx.strongly_connected_components(G))\n",
+    "max_graph = None\n",
+    "max_edges = 0\n",
+    "for i in list_of_subgraphs:\n",
+    "    if i.number_of_edges() > max_edges:\n",
+    "        max_edges = i.number_of_edges()\n",
+    "        max_graph = i\n",
+    "\n",
+    "# set your graph equal to the largest sub-graph\n",
+    "G = max_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4393\n",
+      "(8195, {'x': -21.7997148, 'y': 64.1236937})\n",
+      "6040\n",
+      "(8195, 12350, {'Wkt': <shapely.geometry.linestring.LineString object at 0x12967e3d0>, 'id': 11872, 'infra_type': 'residential', 'osm_id': '166647087', 'key': 'edge_11872', 'length': 0.06203796196973288})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inspect the resulting Graph\n",
+    "nodes = list(G.nodes(data=True))\n",
+    "edges = list(G.edges(data=True))\n",
+    "print(len(nodes))\n",
+    "print(nodes[0])\n",
+    "print(len(edges))\n",
+    "print(edges[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# To become familiar with the function read the doc string\n",
     "gn.clean_network?"
    ]
@@ -52,16 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "data_pth = os.path.join(pth, 'tutorial_outputs')\n",
-    "\n",
-    "# read back your graph from step 1 from you saved pickle\n",
-    "G = nx.read_gpickle(os.path.join(data_pth, 'iceland_unclean.pickle'))\n",
-    "\n",
     "Iceland_UTMZ = {'init': 'epsg:32627'}\n",
     "\n",
     "WGS = {'init': 'epsg:4326'} # do not adjust. OSM natively comes in ESPG 4326"
@@ -76,14 +138,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start: Fri Jan 31 15:53:40 2020\n",
+      "start: Wed Feb 19 14:29:53 2020\n",
       "\n"
      ]
     },
@@ -94,20 +156,22 @@
       "/Users/thomasgertin3/anaconda3/envs/gostnets2/lib/python3.7/site-packages/pyproj-2.4.2.post1-py3.7-macosx-10.9-x86_64.egg/pyproj/crs.py:77: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method.\n",
       "  return _prepare_from_string(\" \".join(pjargs))\n",
       "/Users/thomasgertin3/anaconda3/envs/gostnets2/lib/python3.7/site-packages/pyproj-2.4.2.post1-py3.7-macosx-10.9-x86_64.egg/pyproj/crs.py:77: FutureWarning: '+init=<authority>:<code>' syntax is deprecated. '<authority>:<code>' is the preferred initialization method.\n",
-      "  return _prepare_from_string(\" \".join(pjargs))\n"
+      "  return _prepare_from_string(\" \".join(pjargs))\n",
+      "/Users/thomasgertin3/anaconda3/envs/gostnets2/lib/python3.7/site-packages/geopandas-0.6.2-py3.7.egg/geopandas/tools/sjoin.py:61: UserWarning: CRS of frames being joined does not match!({'init': 'epsg:4326'} != epsg:4326)\n",
+      "  \"(%s != %s)\" % (left_df.crs, right_df.crs)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1903\n",
-      "3454\n",
-      "1543\n",
-      "2919\n",
-      "Edge reduction: 19463 to 2919 (85 percent)\n",
+      "364\n",
+      "513\n",
+      "250\n",
+      "381\n",
+      "Edge reduction: 6040 to 381 (93 percent)\n",
       "\n",
-      "end: Fri Jan 31 15:54:20 2020\n",
+      "end: Wed Feb 19 14:30:00 2020\n",
       "\n",
       "--- processing complete\n"
      ]
