Update Step 4 - Gravity Calculations.ipynb

--- a/Tutorial/Step 4 - Gravity Calculations.ipynb
+++ b/Tutorial/Step 4 - Gravity Calculations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,21 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pth = \"./\" # change this path to your working folder\n",
-    "G = nx.read_gpickle(os.path.join(pth, 'tutorial_outputs', r'iceland_network_clean.pickle'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_time = gn.convert_network_to_time(G, distance_tag = 'length', road_col = 'infra_type', factor = 1000)"
+    "# Define input data\n",
+    "pth = \"./\"\n",
+    "# Read in cleaned pickle from earlier analysis and convert to time\n",
+    "G = nx.read_gpickle(os.path.join(pth, 'tutorial_outputs', r'iceland_network_clean.pickle'))\n",
+    "G_time = gn.convert_network_to_time(G, distance_tag = 'length', road_col = 'infra_type', factor = 1000)\n",
+    "# Define origins and destinations\n",
+    "rek_grid_file = os.path.join(pth, \"tutorial_data\", \"rek_grid.shp\")\n",
+    "rek_pop_grid_file = rek_grid_file.replace(\".shp\", \"_pop.shp\")\n",
+    "churches_file = os.path.join(pth, \"tutorial_data\", \"churches.shp\")"
    ]
   },
   {
@@ -56,18 +54,16 @@
     "\n",
     "‘Market access’ is a measure of accessibility from one origin to all destinations, based purely on time. The outcome of this analysis is often visualized as an ‘isochrone’, centered on a given origin point. Isochrones depict how far away from the origin you can move, in all directions, within a certain time frame. (E.g. 1 hour).\n",
     "\n",
-    "‘Market potential’ can be assessed by weighting all potential destinations by a factor designed to represent their attractiveness to the origin point. In the context of performing commercial site selection, such factors might include GDP per capita or population (positively related), or the number of other firms (negatively related). We refer to each origin – destination pair as an ‘O-D’ pair, and the matrix of travel times from all origin points to all destination points as an ‘O-D matrix’. An example of such a matrix is given below for five origin and destination points, A to E:"
+    "‘Market potential’ can be assessed by weighting all potential destinations by a factor designed to represent their attractiveness to the origin point. In the context of performing commercial site selection, such factors might include GDP per capita or population (positively related), or the number of other firms (negatively related). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample rek_grid with population\n",
-    "rek_grid_file = os.path.join(pth, \"tutorial_data\", \"rek_grid.shp\")\n",
-    "rek_pop_grid_file = rek_grid_file.replace(\".shp\", \"_pop.shp\")\n",
+    "# Sample rek_grid with population - the data should already be in the tutorial inputs, so this attribution is not necessary\n",
     "if not os.path.exists(rek_pop_grid_file):\n",
     "    population_data = \"R:\\GLOBAL\\POP&DEMO\\LandScan_2012\\lspop2012.tif\"\n",
     "\n",
@@ -83,23 +79,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check out data\n",
+    "\n",
+    "#### open QGIS and check out rek_grid and the churches file"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read in the input \n",
     "rek_grid = gpd.read_file(rek_pop_grid_file)\n",
-    "churches_file = os.path.join(pth, \"tutorial_data\", \"churches.shp\")\n",
     "in_churches = gpd.read_file(churches_file)\n",
     "in_churches = in_churches.to_crs(rek_grid.crs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# calculate the origins and destinations by snapping to the road network\n",
     "origins_df = gn.pandana_snap_c(G_time, rek_grid, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
     "origins = list(set(origins_df['NN']))\n",
     "destinations_df = gn.pandana_snap_c(G_time, in_churches, source_crs='epsg:4326', target_crs='epsg:4326',add_dist_to_node_col = True)\n",
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,32 +123,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The calculate_od_raw contains functions for performing OD and gravity calculations\n",
     "import GOSTnets.calculate_od_raw as calcOD\n",
+    "# For this calculation the origins are all weighted equally with a value of 1\n",
     "gravity = calcOD.calculate_gravity(OD, oWeight=[1] * OD.shape[0], dWeight = destinations_df['Pop'])\n",
     "gravity['NN'] = origins"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.merge?"
+    "# merge the gravity results with the origins\n",
+    "origins_gravity = pd.merge(origins_df, gravity, on=\"NN\")\n",
+    "origins_gravity.to_file(rek_pop_grid_file.replace(\".shp\", \"_gravity.shp\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Now let's introduce the population numbers into the origins\n",
+    "origins = origins_df['NN']\n",
+    "destinations = destinations_df['NN']\n",
+    "OD = gn.calculate_OD(G_time, origins, destinations, fail_value = 9999999)\n",
+    "gravity = calcOD.calculate_gravity(OD, oWeight=origins_df['Pop'], dWeight = destinations_df['Pop'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merge the gravity results with the origins\n",
     "origins_gravity = pd.merge(origins_df, gravity, on=\"NN\")\n",
-    "origins_gravity.to_file(rek_pop_grid_file.replace(\".shp\", \"_gravity.shp\"))"
+    "origins_gravity.to_file(rek_pop_grid_file.replace(\".shp\", \"_gravity2.shp\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Check out data\n",
+    "\n",
+    "#### open QGIS and check out rek_grid and the churches file"
    ]
   },
   {
@@ -157,7 +190,7 @@
   "kernelspec": {
    "display_name": "Python (geog)",
    "language": "python",
-   "name": "geog"
+   "name": "geog36"
   },
   "language_info": {
    "codemirror_mode": {
@@ -169,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
